--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,7 @@
 .cover__overlay {
     position: relative;
     background-image: url(../../../images/cover__background.png);
-    min-width: 1184px;
+    max-width: 1184px;
     min-height: 740px;
     box-sizing: border-box;
     display: flex;
@@ -34,7 +34,6 @@
 
 @media screen and (max-width:1024px) {
     .cover__overlay {
-        min-width: 1024px;
         min-height: 640px;
     }
 
@@ -42,7 +41,6 @@
 
 @media screen and (max-width:768px) {
     .cover__overlay {
-        min-width: 768px;
         min-height: 480px;
     }
 
@@ -50,7 +48,6 @@
 
 @media screen and (max-width:320px) {
     .cover__overlay {
-        min-width: 320px;
         min-height: 200px;
         background-position: center;
     }
