--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,15 +1,12 @@
 .lead__image {
-    width: 984px;
-    height: 615px;
+    width: 100%;
     margin: 64px auto 0;
-    box-sizing: border-box;
 }
 
 @media screen and (max-width:1024px) {
     .lead__image {
         margin-top: 56px;
         max-width: 928px;
-        max-height: 580px;
     }
 }
 
@@ -17,7 +14,6 @@
     .lead__image {
         margin-top: 56px;
         max-width: 768px;
-        max-height: 480px;
     }
 }
 
@@ -25,6 +21,5 @@
     .lead__image {
         margin-top: 40px;
         max-width: 320px;
-        max-height: 200px;
     }
 }
