--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,6 @@
 .lead__subtitle {
-    width: 640px;
+    max-width: 640px;
+    width: 100%;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
