--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,14 +1,14 @@
 .lead {
+    max-width: 984px;
     display: flex;
     flex-direction: column;
     margin: 0 auto 92px;
-    position: relative;
-    max-width: 984px;
 }
 
 @media screen and (max-width:1024px) {
     .lead {
         max-width: 928px;
+        margin-top: 48px;
     }
 }
 
