--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,15 +2,15 @@
     max-width: 1184px;
     display: grid;
     gap: 16px;
-    grid-template-columns: repeat(4, 284px);
+    grid-template-columns: repeat(4, minmax(auto, 284px));
     grid-template-rows: repeat(3, 213px);
     margin: 92px auto 92px;
 }
 
 @media screen and (max-width:1024px) {
     .photo-grid {
-        grid-template-columns: repeat(3, 300px);
-        grid-template-rows: repeat(4, 225px);
+        grid-template-columns: repeat(3, minmax(auto, 300px));
+        grid-template-rows: repeat(4, minmax(auto, 225px));
         gap: 14px;
         max-width: 928px;
     }
@@ -18,8 +18,8 @@
 
 @media screen and (max-width:768px) {
     .photo-grid {
-        grid-template-columns: repeat(2, 352px);
-        grid-template-rows: repeat(6, 264px);
+        grid-template-columns: repeat(2, minmax(auto, 352px));
+        grid-template-rows: repeat(6, minmax(auto, 264px));
         gap: 16px;
         max-width: 720px;
         margin-top: 88px;
@@ -28,8 +28,8 @@
 
 @media screen and (max-width:320px) {
     .photo-grid {
-        grid-template-columns: repeat(1, 288px);
-        grid-template-rows: repeat(12, 216px);
+        grid-template-columns: repeat(1, minmax(auto, 288px));
+        grid-template-rows: repeat(12, minmax(auto, 216px));
         gap: 12px;
         max-width: 288px;
         margin-top: 64px;
