--- a/blocks/places/place/__website/__url-heading/place__website__url-heading.css
+++ b/blocks/places/place/__website/__url-heading/place__website__url-heading.css
@@ -1,6 +1,5 @@
 .place__url-heading {
-    width: 456px;
-    height: 12px;
+    max-width: 456px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
