--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,10 +8,12 @@
     margin: 0 auto 32px;
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:370px) {
     .cover__title {
+        max-width: 288px;
         font-size: 32px;
         line-height: 35px;
+        margin-bottom: 16px;
     }
 
 }
