--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,5 @@
 .intro {
-    margin: 0 auto 0;
+    margin: 92px auto 0;
     max-width: 984px;
     display: flex;
     flex-direction: column;
@@ -15,6 +15,7 @@
     .intro {
         max-width: 720px;
         margin-top: 88px;
+        padding: 0 24px;
     }
 }
 
@@ -22,5 +23,6 @@
     .intro {
         max-width: 288px;
         margin-top: 64px;
+        padding: 0 16px;
     }
 }
