--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,7 +2,7 @@
     max-width: 984px;
     display: flex;
     flex-direction: column;
-    margin: 0 auto 92px;
+    margin: 0 auto 0;
 }
 
 @media screen and (max-width:1024px) {
@@ -21,5 +21,6 @@
 @media screen and (max-width:320px) {
     .lead {
         max-width: 320px;
+        margin-bottom: 64px;
     }
 }
