--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,5 +4,5 @@
     margin: 0 auto;
     padding: 0;
     color: #FFFFFF;
-    font-family: 'inter';
+    font-family: 'inter', Arial, Helvetica, sans-serif;
 }
