--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
 }
 
+
 @media screen and (max-width:1024px) {
     .footer {
         max-width: 928px;
@@ -19,13 +20,20 @@
     }
 }
 
+@media screen and (max-width:700px) {
+    .footer {
+        margin-left: 20px;
+    }
+}
+
 @media screen and (max-width:320px) {
     .footer {
         display: grid;
         grid-template-columns: max-content;
         grid-template-rows: max-content;
-        row-gap: 32px;
+        row-gap: 48px;
         margin-left: 16px;
         margin-top: 64px;
+        margin-left: 16px;
     }
 }
