--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,6 +5,12 @@
     flex-direction: column;
 }
 
+@media screen and (max-width:1100px) {
+    .intro {
+        padding: 0 20px;
+    }
+}
+
 @media screen and (max-width:1024px) {
     .intro {
         max-width: 928px;
