--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,9 +3,21 @@
     margin: 92px auto 0;
 }
 
+@media screen and (max-width:1100px) {
+    .places {
+        padding: 0 20px;
+    }
+}
+
 @media screen and (max-width:1024px) {
     .places {
         max-width: 928px;
+    }
+}
+
+@media screen and (max-width:968px) {
+    .places {
+        padding: 0 24px;
     }
 }
 
@@ -13,6 +25,7 @@
     .places {
         max-width: 720px;
         margin-top: 88px;
+        padding: 0 24px;
     }
 }
 
