--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,17 +6,29 @@
     box-sizing: border-box;
 }
 
+@media screen and (max-width:1230px) {
+    .footer {
+        margin-left: 20px;
+    }
+}
 
 @media screen and (max-width:1024px) {
     .footer {
         max-width: 928px;
+        margin: 92px auto 24px;
+    }
+}
+
+@media screen and (max-width:980px) {
+    .footer {
+        margin-left: 20px;
     }
 }
 
 @media screen and (max-width:768px) {
     .footer {
         max-width: 720px;
-        margin-top: 88px;
+        margin: 88px 24px 24px 24px;
     }
 }
 
@@ -26,13 +38,12 @@
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:690px) {
     .footer {
         display: grid;
         grid-template-columns: max-content;
         grid-template-rows: max-content;
         row-gap: 48px;
-        margin-left: 16px;
-        margin-top: 64px;
+        margin: 64px 16px 24px 16px;
     }
 }
