--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,23 +3,41 @@
     justify-content: space-between;
     max-width: 1184px;
     margin: 28px auto 56px;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width:1250px) {
+    .header {
+        padding: 0 20px;
+    }
 }
 
 @media screen and (max-width:1024px) {
     .header {
         max-width: 928px;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .header {
+        padding: 0 20px;
     }
 }
 
 @media screen and (max-width:768px) {
     .header {
         max-width: 720px;
+        padding: 0 24px;
+        margin: 28px 0 48px 0;
     }
 }
+
 
 @media screen and (max-width:320px) {
     .header {
         max-width: 288px;
         margin-top: 16px;
+        padding: 0 16px;
     }
 }
