--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -14,6 +14,13 @@
 @media screen and (max-width:1024px) {
     .intro {
         max-width: 928px;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .intro {
+        padding: 0 20px;
     }
 }
 
@@ -25,7 +32,7 @@
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:425px) {
     .intro {
         max-width: 288px;
         margin-top: 64px;
