--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,7 +1,5 @@
 .photo-grid__item {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
