--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,36 +3,46 @@
     display: grid;
     gap: 16px;
     grid-template-columns: repeat(4, minmax(auto, 284px));
-    grid-template-rows: repeat(3, 213px);
     margin: 92px auto 0;
+}
+
+@media screen and (max-width:1230px) {
+    .photo-grid {
+        padding: 0 20px;
+    }
 }
 
 @media screen and (max-width:1024px) {
     .photo-grid {
         grid-template-columns: repeat(3, minmax(auto, 300px));
-        grid-template-rows: repeat(4, minmax(auto, 225px));
         gap: 14px;
         max-width: 928px;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width:970px) {
+    .photo-grid {
+        padding: 0 20px;
     }
 }
 
 @media screen and (max-width:768px) {
     .photo-grid {
         grid-template-columns: repeat(2, minmax(auto, 352px));
-        grid-template-rows: repeat(6, minmax(auto, 264px));
         gap: 16px;
         max-width: 720px;
-        margin-top: 88px;
+        margin-top: 88px 0 0 0;
+        padding: 0 24px;
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:380px) {
     .photo-grid {
         grid-template-columns: repeat(1, minmax(auto, 288px));
-        grid-template-rows: repeat(12, minmax(auto, 216px));
         gap: 12px;
         max-width: 288px;
-        margin-top: 64px;
-        padding: 0 16px;
+        padding: 0;
+        margin: 64px 16px 0 16px;
     }
 }
